--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.10.2",
+    "axios": "^1.6.8",
+    "csv-writer": "^1.6.0",
+    "destroyer": "^0.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "googleapis": "^134.0.0",
+    "moment": "^2.30.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "openai": "^4.29.2"
+    "open": "^10.1.0",
+    "openai": "^4.29.2",
+    "server-destroy": "^1.0.1"
   },
   "type": "module"
 }
