--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/storage": "^7.10.2",
     "axios": "^1.6.8",
     "csv-writer": "^1.6.0",
+    "date-fns": "^3.6.0",
     "destroyer": "^0.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
